____________________________________________

Zelda XD2: Mercuris Chess 1.0.1 (in progress)
____________________________________________

* Fix camera jumping in the freaking cave (#1).
* Fix typos.
* Various minor improvements.

____________________________________________

Zelda XD2: Mercuris Chess 1.0.0 (2017-04-01)
____________________________________________

* Initial release.
