@@ -85,9 +85,11 @@ local function initialize_dialog_box_features(game)
   -- Called by the engine when a dialog starts.
   game:register_event("on_dialog_started", function(game, dialog, info)
 
-    dialog_box.dialog = dialog
-    dialog_box.info = info
-    sol.menu.start(game, dialog_box)
+    if not sol.menu.is_started(dialog_box) then
+      dialog_box.dialog = dialog
+      dialog_box.info = info
+      sol.menu.start(game, dialog_box)
+    end
   end)
 
   -- Called by the engine when a dialog finishes.
